--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,7 +60,7 @@ dependencies = [
     # Native batch renderer specifically designed for Genesis
     "gs-madrona>=0.0.2; platform_system == 'Linux' and (platform_machine == 'x86_64' or platform_machine == 'AMD64')",
     # Used for mesh simplification
-    "fast_simplification==0.1.12",
+    "fast_simplification>=0.1.12",
 ]
 
 [project.optional-dependencies]
