Migrate to native Python API for 'splashsurf'.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,8 @@ dependencies = [
     "gs-madrona>=0.0.2; platform_system == 'Linux' and (platform_machine == 'x86_64' or platform_machine == 'AMD64')",
     # Used for mesh simplification
     "fast_simplification>=0.1.12",
+    # Surface reconstruction library for particle data from SPH simulations
+    "pysplashsurf",
 ]
 
 [project.optional-dependencies]
