--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,6 +100,10 @@ render = [
     "pybind11[global]",
     "open3d",
 ]
+usd = [
+    # Used for parsing `.usd` mesh files
+    "usd-core",
+]
 
 [project.scripts]
 gs = "genesis._main:main"
