--- a/.github/workflows/generic.yml
+++ b/.github/workflows/generic.yml
@@ -19,8 +19,11 @@ jobs:
       fail-fast: false
       matrix:
         # See official Github documentation for details: https://shorturl.at/NJgsj
-        OS: ["ubuntu-22.04", "ubuntu-24.04", "macos-15", "windows-cpu-4-core"]
+        OS: ["ubuntu-22.04", "ubuntu-24.04", "macos-15"]
         PYTHON_VERSION: ["3.10", "3.11", "3.12", "3.13"]
+        include:
+          - OS: "windows-cpu-4-core"
+            PYTHON_VERSION: "3.12"
 
     env:
       HF_HUB_DOWNLOAD_TIMEOUT: 60
