--- a/.github/workflows/generic.yml
+++ b/.github/workflows/generic.yml
@@ -81,24 +81,15 @@ jobs:
           7z x mesa.7z -omesa
           mv -v mesa/x64/* /C/Windows/System32/
 
-      - name: Install system dependencies (Linux)
+      - name: Install Mesa 25 OpenGL driver (Linux)
         if: startsWith(matrix.OS, 'ubuntu-')
         run: |
+          sudo add-apt-repository -y ppa:kisak/kisak-mesa
           sudo apt-get update
           sudo apt install -y \
-              libgl1 \
-              libegl1 \
-              libglvnd-dev \
-              libglew-dev \
-              libegl-dev \
-              libx11-6  \
-              libxrender1 \
-              libglib2.0-0 \
-              libosmesa6-dev \
-              libglx-mesa0 \
               libglu1-mesa \
-              libegl1-mesa-dev \
-              libgles2-mesa-dev
+              libegl-mesa0 \
+              libgl1-mesa-dev
       - name: Install python dependencies
         run: |
           pip install --upgrade pip setuptools pkg-info wheel
