--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -24,6 +24,8 @@ jobs:
       HF_HUB_DOWNLOAD_TIMEOUT: 60
       GENESIS_IMAGE_VER: "1_1"
       TIMEOUT_MINUTES: 180
+      FORCE_COLOR: 1
+      PY_COLORS: 1
       MADRONA_DISABLE_CUDA_HEAP_SIZE: "1"
       OMNI_KIT_ACCEPT_EULA: "yes"
       OMNI_KIT_ALLOW_ROOT: "1"
