--- a/.github/workflows/generic.yml
+++ b/.github/workflows/generic.yml
@@ -27,6 +27,8 @@ jobs:
 
     env:
       HF_HUB_DOWNLOAD_TIMEOUT: 60
+      FORCE_COLOR: 1
+      PY_COLORS: 1
       GS_CACHE_FILE_PATH: ".cache/genesis"
       TI_OFFLINE_CACHE: "1"
       TI_OFFLINE_CACHE_CLEANING_POLICY: "never"
@@ -93,7 +95,7 @@ jobs:
       - name: Install python dependencies
         run: |
           pip install --upgrade pip setuptools pkg-info wheel
-          pip install torch
+          pip3 install torch --index-url https://download.pytorch.org/whl/cpu
 
       - name: Black Format Check
         if: matrix.OS == 'ubuntu-22.04' && matrix.PYTHON_VERSION == '3.12'
