--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 requires-python = ">=3.10,<3.14"
 dependencies = [
     "psutil",
-    "gstaichi==2.2.0.dev1",
+    "gstaichi==2.2.0b2",
     "pydantic>=2.7.1",
     "numpy>=1.26.4",
     "trimesh",
