--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,7 +43,10 @@ dependencies = [
     "tetgen>=0.6.4",
     # Used for some advanced mesh processing such as `skeletonization`
     "PyGEL3D",
-    # Use to display camera images
+    # Used here and there to load and export images
+    # * 11.0 dramatically improves performance when exporting images to PNG
+    "Pillow>11.0",
+    # Use to display camera images and export images
     "opencv-python",
     # Use by `RigidGeom.visualize_sdf` to render SDF as level 0 marching cubes
     "scikit-image",
