--- a/.github/workflows/generic.yml
+++ b/.github/workflows/generic.yml
@@ -38,11 +38,12 @@ jobs:
       PY_COLORS: 1
       GS_CACHE_FILE_PATH: ".cache/genesis"
       GS_USE_NDARRAY: ${{ matrix.GS_USE_NDARRAY }}
+      GS_TORCH_FORCE_CPU_DEVICE: "1"
       TI_OFFLINE_CACHE: "1"
       TI_OFFLINE_CACHE_CLEANING_POLICY: "never"
       TI_OFFLINE_CACHE_FILE_PATH: ".cache/taichi"
       TI_ENABLE_CUDA: "0"
-      TI_ENABLE_METAL: "0"
+      TI_ENABLE_METAL: "1"
       TI_ENABLE_OPENGL: "0"
       TI_ENABLE_VULKAN: "0"
       TI_DEBUG: "0"
