--- a/pyproject.toml
+++ b/pyproject.toml
@@ -86,7 +86,8 @@ dev = [
     #   which requires setting the disableflags 'mjDSBL_ISLAND'.
     "mujoco>=3.3.6,<3.4.0",
     # for visualization recorders test
-    "matplotlib",
+    # * 3.7.0: introduces Button blitting and 'outside' keyword legend location
+    "matplotlib>=3.7.0",
 ]
 docs = [
     # Note that currently sphinx 7 does not work, so we must use v6.2.1. Once fixed we can use a later version.
