--- a/.github/workflows/generic.yml
+++ b/.github/workflows/generic.yml
@@ -124,6 +124,9 @@ jobs:
         run: |
           pip install -e '.[dev]'
 
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
+
       - name: Run unit tests
         run: |
           pytest -v --logical --dev --backend ${{ matrix.GS_BACKEND }} --forked -m required ./tests
