add torch dependency

--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -67,6 +67,7 @@ jobs:
       - name: Install Python deps
         run: |
           pip install --upgrade pip setuptools wheel
+          pip install torch --index-url https://download.pytorch.org/whl/cpu
           pip install -e '.[dev]'
 
       - name: Run examples suite
